--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,11 @@
 # generated files
 bin/
 gen/
+*.iws
+*.iml
+*.ipr
+target/
+.idea/
 
 # Local configuration file (sdk path, etc)
 local.properties
