--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,7 +8,8 @@
 
     <application
             android:icon="@drawable/ic_launcher"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:name="com.wasn.application.MobileBankApplication">
         <activity
                 android:name=".MobileBankActivity"
                 android:label="@string/app_name"
@@ -31,6 +32,16 @@
 
         <activity
                 android:name=".TransactionActivity"
+                android:screenOrientation="portrait"
+                android:configChanges="orientation"
+                android:launchMode="singleTask"
+                android:clearTaskOnLaunch="true"
+                android:theme="@android:style/Theme.NoTitleBar"
+                android:windowSoftInputMode="stateAlwaysHidden">
+        </activity>
+
+        <activity
+                android:name=".SearchResultListActivity"
                 android:screenOrientation="portrait"
                 android:configChanges="orientation"
                 android:launchMode="singleTask"
