--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -51,6 +51,16 @@
         </activity>
 
         <activity
+                android:name=".SettingsActivity"
+                android:screenOrientation="portrait"
+                android:configChanges="orientation"
+                android:launchMode="singleTask"
+                android:clearTaskOnLaunch="true"
+                android:theme="@android:style/Theme.NoTitleBar"
+                android:windowSoftInputMode="stateAlwaysHidden">
+        </activity>
+
+        <activity
                 android:name=".ClientListActivity"
                 android:screenOrientation="portrait"
                 android:configChanges="orientation"
