--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,11 +13,11 @@
         <activity
                 android:name=".MobileBankActivity"
                 android:label="@string/app_name"
-                android:theme="@android:style/Theme.Light.NoTitleBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
+                android:theme="@android:style/Theme.Light.NoTitleBar"
+                android:screenOrientation="portrait"
+                android:configChanges="orientation"
+                android:clearTaskOnLaunch="true"
+                android:windowSoftInputMode="stateAlwaysHidden">
         </activity>
 
         <activity
@@ -58,6 +58,20 @@
                 android:clearTaskOnLaunch="true"
                 android:theme="@android:style/Theme.NoTitleBar"
                 android:windowSoftInputMode="stateAlwaysHidden">
+        </activity>
+
+        <activity
+                android:name=".LoginActivity"
+                android:screenOrientation="portrait"
+                android:configChanges="orientation"
+                android:launchMode="singleTask"
+                android:clearTaskOnLaunch="true"
+                android:theme="@android:style/Theme.NoTitleBar"
+                android:windowSoftInputMode="stateAlwaysHidden">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
         </activity>
 
         <activity
