--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -104,6 +104,16 @@
                 android:windowSoftInputMode="stateAlwaysHidden">
         </activity>
 
+        <activity
+                android:name=".SummaryDetailsActivity"
+                android:screenOrientation="portrait"
+                android:configChanges="orientation"
+                android:launchMode="singleTask"
+                android:clearTaskOnLaunch="true"
+                android:theme="@android:style/Theme.NoTitleBar"
+                android:windowSoftInputMode="stateAlwaysHidden">
+        </activity>
+
     </application>
 
 </manifest>
