Finalized data downlod service

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -116,6 +116,7 @@
 
     </application>
 
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
 
