--- a/mbank/src/main/AndroidManifest.xml
+++ b/mbank/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
                 android:configChanges="orientation"
                 android:launchMode="singleTask"
                 android:clearTaskOnLaunch="true"
-                android:theme="@android:style/Theme.NoTitleBar"
+                android:theme="@android:style/Theme.Holo.NoActionBar"
                 android:windowSoftInputMode="stateAlwaysHidden">
         </activity>
 
@@ -36,7 +36,7 @@
                 android:configChanges="orientation"
                 android:launchMode="singleTask"
                 android:clearTaskOnLaunch="true"
-                android:theme="@android:style/Theme.NoTitleBar"
+                android:theme="@android:style/Theme.Holo.NoActionBar"
                 android:windowSoftInputMode="stateAlwaysHidden">
         </activity>
 
@@ -46,7 +46,7 @@
                 android:configChanges="orientation"
                 android:launchMode="singleTask"
                 android:clearTaskOnLaunch="true"
-                android:theme="@android:style/Theme.NoTitleBar"
+                android:theme="@android:style/Theme.Holo.NoActionBar"
                 android:windowSoftInputMode="stateAlwaysHidden">
         </activity>
 
@@ -56,7 +56,7 @@
                 android:configChanges="orientation"
                 android:launchMode="singleTask"
                 android:clearTaskOnLaunch="true"
-                android:theme="@android:style/Theme.NoTitleBar"
+                android:theme="@android:style/Theme.Holo.NoActionBar"
                 android:windowSoftInputMode="stateAlwaysHidden">
         </activity>
 
@@ -76,7 +76,7 @@
                 android:configChanges="orientation"
                 android:launchMode="singleTask"
                 android:clearTaskOnLaunch="true"
-                android:theme="@android:style/Theme.NoTitleBar"
+                android:theme="@android:style/Theme.Holo.NoActionBar"
                 android:windowSoftInputMode="stateAlwaysHidden">
         </activity>
 
@@ -86,7 +86,7 @@
                 android:configChanges="orientation"
                 android:launchMode="singleTask"
                 android:clearTaskOnLaunch="true"
-                android:theme="@android:style/Theme.NoTitleBar"
+                android:theme="@android:style/Theme.Holo.NoActionBar"
                 android:windowSoftInputMode="stateAlwaysHidden">
         </activity>
 
@@ -96,7 +96,7 @@
                 android:configChanges="orientation"
                 android:launchMode="singleTask"
                 android:clearTaskOnLaunch="true"
-                android:theme="@android:style/Theme.NoTitleBar"
+                android:theme="@android:style/Theme.Holo.NoActionBar"
                 android:windowSoftInputMode="stateAlwaysHidden">
         </activity>
 
@@ -106,7 +106,7 @@
                 android:configChanges="orientation"
                 android:launchMode="singleTask"
                 android:clearTaskOnLaunch="true"
-                android:theme="@android:style/Theme.NoTitleBar"
+                android:theme="@android:style/Theme.Holo.NoActionBar"
                 android:windowSoftInputMode="stateAlwaysHidden">
         </activity>
 
